# tokn

./: .dockerignore  .gitattributes  AGENTS.md  Cargo.toml  Dockerfile  README.md  VERSION
crates/access/: Cargo.toml
crates/access/src/: lib.rs
crates/accounts/: Cargo.toml
crates/accounts/src/: affinity.rs  handle.rs  inventory.rs  lib.rs  pool.rs  registry.rs  routing.rs
crates/agent-migration/: Cargo.toml  agent.plan.md
crates/agent-migration/src/: adapter.rs  agent.rs  codex.rs  jsonc.rs  lib.rs  manifest.rs  migration.rs  opencode.rs  reconcile.rs  status.rs
crates/agent-migration/src/adapters/: codex.rs  mod.rs  opencode.rs  pi.rs
crates/auth/: Cargo.toml
crates/auth/src/: descriptor.rs  lib.rs  provider.rs  store.rs
crates/catalogue/: Cargo.toml  build.rs
crates/catalogue/scripts/: bootstrap.sh
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  paths.rs  profiles.rs
crates/convert/: Cargo.toml
crates/convert/examples/: extras_stats.rs
crates/convert/src/: chat.rs  ir.rs  lib.rs  messages.rs  responses.rs  tools.rs  usage.rs
crates/convert/src/chat/: request.rs  response.rs  sse.rs
crates/convert/src/messages/: mod.rs  request.rs  response.rs  sse.rs
crates/convert/src/responses/: request.rs  response.rs  sse.rs
crates/convert/src/sse/: accumulate.rs  mod.rs  pipeline.rs  responses_emit.rs  translate.rs
crates/convert/src/value/: chat.rs  messages.rs  mod.rs  responses.rs
crates/convert/tests/: golden_chat_to_responses.rs
crates/endpoint-chat-completions/: Cargo.toml
crates/endpoint-chat-completions/src/: content.rs  event.rs  extra_keys_impls.rs  lib.rs  message.rs  parameters.rs  request.rs  response.rs  usage.rs
crates/endpoint-chat-completions/tests/: round_trip.rs
crates/endpoint-core/: Cargo.toml
crates/endpoint-core/src/: endpoint.rs  extra_keys_impls.rs  extras.rs  finish.rs  lenient.rs  lib.rs  role.rs  tool.rs  traits.rs  usage.rs
crates/endpoint-macros/: Cargo.toml
crates/endpoint-macros/src/: lib.rs
crates/headers/: Cargo.toml
crates/headers/src/: agent.rs  agent_id.rs  error.rs  inbound.rs  keys.rs  lib.rs  map.rs  name.rs  normalizer.rs  persona.rs  registry.rs  reqwest_compat.rs  schema.rs  value.rs  vars.rs
crates/headers/src/schemas/: mod.rs
crates/headers/src/schemas/overlays/: codex.rs  copilot.rs
crates/headers/src/schemas/personas/: claude_code.rs  cline.rs  codex_cli.rs  copilot_cli.rs  opencode.rs
crates/headers/tests/: real_world_inbound.rs  schema_examples.rs  strict_real_world.rs
crates/headers/tests/fixtures/schema_examples/: codex__responses__codex-cli.yaml  deepseek__chat_completions__opencode.yaml  deepseek__responses__codex-cli.yaml  github-copilot__responses__opencode.yaml
crates/legacy-config/: Cargo.toml
crates/legacy-config/src/: lib.rs  locations.rs  schema.rs
crates/mock-server/: Cargo.toml
crates/mock-server/src/: route.rs  server.rs  tests.rs
crates/persistence/: Cargo.toml
crates/persistence/schemas/: README.md
crates/persistence/schemas/migrations/requests/: 0007_split_requests.sql  0008_metadata_json.sql
crates/persistence/schemas/migrations/sessions/: 0002_mark_v0_2_0.sql  0002_tree_nodes.sql  0003_session_views.sql  0004_thread_lineage.sql  0005_message_tree.sql
crates/persistence/schemas/migrations/usage/: 0005_mark_v0_2_0.sql  0005_request_metadata.sql  0006_add_user.sql
crates/persistence/schemas/snapshot/access/: v0.2.1.sql
crates/persistence/schemas/snapshot/requests/: v0.1.1.sql  v0.2.0.sql
crates/persistence/schemas/snapshot/sessions/: v0.2.0.sql  v0.2.1.sql
crates/persistence/schemas/snapshot/usage/: v0.2.0.sql  v0.2.1.sql
crates/persistence/schemas/squash/requests/: v0.0.0_v0.1.1_0001_0007.sql  v0.1.1_v0.2.0_0006_0007.sql  v0.1.1_v0.2.0_0006_0008.sql
crates/persistence/schemas/squash/sessions/: v0.1.1_v0.2.0_0001_0001.sql  v0.1.1_v0.2.0_0001_0002.sql  v0.2.0_v0.2.1_0004_0005.sql
crates/persistence/schemas/squash/usage/: v0.1.1_v0.2.0_0004_0004.sql  v0.1.1_v0.2.0_0004_0005.sql  v0.2.0_v0.2.1_0005_0006.sql
crates/persistence/src/: access.rs  archive.rs  inspect.rs  lib.rs  migrate.rs  request_events.rs  requests.rs  router2.rs  sessions.rs  usage.rs
crates/persistence/src/requests/: mod.rs  stages.rs
crates/persistence/src/sessions/: live.rs  semantic.rs
crates/persistence/src/viewer/: database.rs  days.rs  mod.rs  schema.rs  sessions.rs  usage.rs  value.rs
crates/persistence/src/viewer/requests/: cursor.rs  detail.rs  list.rs  llm_summary.rs  mod.rs  (+2 more)
crates/persistence/tests/: request_events.rs  router2.rs  schemas.rs  schemas_v0_1_1.rs  v0_1_1.rs
crates/persistence/tests/fixtures/: requests_expected_v0.1.1.jsonl  requests_expected_v0.2.0.jsonl  requests_meta_v0.1.1.json  requests_meta_v0.2.0.json  requests_seed_v0.1.1.jsonl  sessions_expected_v0.2.0.jsonl  sessions_expected_v0.2.1.jsonl  sessions_meta_v0.1.1.json  sessions_meta_v0.2.0.json  sessions_meta_v0.2.1.json  usage_expected_v0.1.1.jsonl  usage_expected_v0.2.0.jsonl  usage_expected_v0.2.1.jsonl  usage_meta_v0.1.1.json  usage_meta_v0.2.0.json  usage_meta_v0.2.1.json  usage_seed_v0.1.1.jsonl
crates/provider-copilot/: Cargo.toml
crates/provider-copilot/src/: auth.rs  config.rs  github_copilot.rs  headers.rs  import.rs  lib.rs  oauth.rs
crates/provider-deepseek/: Cargo.toml
crates/provider-deepseek/src/: deepseek.rs  lib.rs
crates/provider-openai/: Cargo.toml
crates/provider-openai/src/: auth.rs  auth_codex.rs  auth_openai.rs  codex.rs  common.rs  jwt.rs  lib.rs  openai.rs
crates/provider-zai/: Cargo.toml
crates/provider-zai/src/: auth.rs  lib.rs  models.rs  zai.rs
crates/router-inspect/: Cargo.toml
crates/router-inspect/src/: lib.rs
crates/router-inspect/web/: index.html  package.json  tsconfig.json  tsconfig.test.json
crates/router-inspect/web/src/: api.ts  app.ts  format.ts  llm-expandable-item.ts  llm-request-overview.spec.ts  llm-request-overview.ts  llm-request.ts  request-detail.ts  session-tree.spec.ts  session-tree.ts  session-views.ts  styles.css  types.ts  web-search-detail.ts  web-search.spec.ts  web-search.ts
(+266 files in other folders)
