[package]
name = "tokn-access"
version.workspace = true
edition.workspace = true
description = "Inbound API-key authentication and provider authorization for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
tokn-persistence = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
