[package]
name = "llm-accounts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
llm-config = { workspace = true }
llm-provider-copilot = { workspace = true }
llm-provider-deepseek = { workspace = true }
llm-provider-openai = { workspace = true }
llm-provider-zai = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
