[package]
name = "tokn-agent-migration"
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Agent credential and config migration helpers for the tokn-router workspace"
license.workspace = true
readme = "../../README.md"

[dependencies]
tokn-auth = { workspace = true }
tokn-config = { workspace = true }
tokn-core = { workspace = true }
tokn-provider-copilot = { workspace = true }
tokn-provider-openai = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
jsonc-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = "3"
