[package]
name = "tokn-auth"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokn-core = { workspace = true }
tokn-config = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
