[package]
name = "tokn-catalogue"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokn-core = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
