[package]
name = "tokn-config"
version.workspace = true
edition = "2021"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
tokn-core = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
