[package]
name = "tokn-router-config"
version.workspace = true
edition.workspace = true
description = "Configuration loading and path resolution for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "tokn_config"

[dependencies]
tokn-core = { workspace = true }
tokn-headers = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
