[package]
name = "tokn-convert"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokn-core = { workspace = true }
bytes = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokn-config = { workspace = true }
tokn-endpoint-core = { workspace = true }
tokn-endpoint-chat-completions = { workspace = true }
tokn-endpoint-responses = { workspace = true }
tokn-endpoint-messages = { workspace = true }
rusqlite = { workspace = true }
