[package]
name = "tokn-endpoint-chat-completions"
version.workspace = true
edition = "2021"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
tokn-endpoint-core = { workspace = true }
tokn-endpoint-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
