[package]
name = "tokn-endpoint-core"
version.workspace = true
edition = "2021"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
