[package]
name = "tokn-endpoint-macros"
version.workspace = true
edition = "2021"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
