[package]
name = "tokn-headers"
version.workspace = true
edition = "2021"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
