[package]
name = "tokn-router-legacy-config"
version.workspace = true
edition.workspace = true
description = "Legacy location and schema migration helpers for tokn-router config"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
tokn-config = { workspace = true }

anyhow = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
