[package]
name = "tokn-provider-zai"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokn-core = { workspace = true }
tokn-auth = { workspace = true }
tokn-catalogue = { workspace = true }
tokn-headers = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
